do openapi and order rest controller
